control_motor/control_motor/log/build_2024-09-30_21-29-51/control_motor/stderr.log
  File "/home/jimmy/work/install/control_motor/lib/python3.10/site-packages/control_motor/motorspeed.py", line 16
    (twist_msg.)
               ^
SyntaxError: f-string: invalid syntax

Sorry: IndentationError: expected an indented block after function definition on line 33 (motor_control.py, line 36)
